@startuml
'skinparam monochrome true
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype polyline
'skinparam linetype orto

skinparam classAttributeIconSize 0

'left to right direction

class Brand {
    -String name
    -List <Model> model

    +Brand(name)
    +addModel(model)
    +hasModelByName(modelName)
}

class Model {
    -String name

    +Model(name)
}

class Vehicle {
    -Brand brand
    -Model model
    -String type
    -float tare
    -float grossWeight
    -int currentKm
    -Date registerDate
    -Date acquisitionDate
    -int checkupFrequency
    -String licensePlate
    -List<CheckUp> checkUpList;

    +Vehicle(type,tare,grossWeight,currentKm,registerDate,acquisitionDate,checkupFrequency,licensePlate,brand,model)
    -validateVehicle(vehicle)
}

class RegisterVehicleController {

    +RegisterVehicleController()
    -getBrand(brandName,modelName)
    +registerVehicle(type,tare,grossWeight,currentKm,registerDate,acquisitionDate,checkupFrequency,licensePlate,brandName,modelName)
}

class RegisterVehicleUI {
}

class Collaborator {
    -String name
    -List<Skill> skillList
    -Job job
    -Date dateOfBirth
    -Date admissionDate
    -Address address
    -Document document
    -String phoneNumber
    -String email
    -int taxpayer

    + Collaborator(name, dateOfBirth, admissionDate, address, document, phoneNumber, email, taxpayer)
}

class VehicleFleetManager {
}

class Repositories {

    -Repositories()
    +getInstance() : Repositories
    +getVehicleRepository()
    +getBrandRepository()
}

class VehicleRepository {
    -List<Vehicle> vehicle

    -addVehicle(vehicle)
    -validateVehicle(vehicle)
    +registerVehicle(type,tare,grossWeight,currentKm,registerDate,acquisitionDate,checkupFrequency,licensePlate,brand,model)
}

class BrandRepository {
    -List<Brand> brand

    +addBrand(brand)
    +getBrandByModelName(modelName)
    +hasBrandByName(brandName)
}

RegisterVehicleController .> Repositories : repositories
RegisterVehicleController .> "1" VehicleRepository
RegisterVehicleController .> "1" BrandRepository
RegisterVehicleController ..> "1" Brand
RegisterVehicleController ..> "1" Model

RegisterVehicleUI .> RegisterVehicleController

Repositories -> Repositories : instance
Repositories --> "1" VehicleRepository : vehicleRepository
Repositories --> "1" BrandRepository : brandRepository

VehicleRepository ---> "*" Vehicle

BrandRepository --> "*" Brand

Collaborator  <|--  VehicleFleetManager
Collaborator "*" -> "*" Vehicle : drives

VehicleFleetManager <-  Vehicle: createdBy

Brand "1" --> "1..*" Model : has
Brand "1" --> "1..*" Vehicle : has

Vehicle "1..*" -> "1" Model : has

@enduml